tests/paczka1/fuzzy1/77668134.err
Error in line 11: lDvotV5pi S38 58,4
Error in line 23: SyiAo9w S38 21,4
Error in line 36: SyiAo9w S38 49,30
Error in line 32: SyiAo9w S549 53,8
